# desktop-pet

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: pr-check.yml  release.yml
app/: index.html  pet.js  speech.html  speech.js  styles.css
app/assets/pet/: i18n.json  speech-lines.json
assets/pet/: manifest.json
native-ui/: pet.js
patches/: app-builder-lib+26.8.1.patch
scripts/: check-version.js
src/: main.js  preload.js  renderer.html  renderer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
