[package]
name = "desktop-pet"
version = "0.3.0-rc.1"
description = "Cross-platform desktop pet"
authors = ["Desktop Pet"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.11.2", features = ["tray-icon", "image-png", "macos-private-api"] }
