[package]
name = "desktop-pet"
version = "0.4.0-rc.1"
description = "Cross-platform desktop pet"
authors = ["Desktop Pet"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
rand = "0.8"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = ["tray-icon", "image-png", "macos-private-api"] }
